test/sh/error/oper/reassign_different_type.sk
mut x := 1

x = 1.0
